[tool.poetry]
name = "dsipts"
version = "2.0.0"
description = "Python library for time series forecasting"
authors = [
	"Andrea Gobbi <agobbi@fbk.eu",
	"Diego Quintana <daquintanav@gmail.com>",
]
readme = "README.md"
packages = [{ include = "dsipts", from = "." }]

[tool.poetry.dependencies]
python = "^3.10"
numpy = "<2.0.0"
aim = "*"
scipy = "*"
pytorch-lightning = "^1.9.4"
pandas = "*"
torchmetrics = "*"
lightning_utilities = "*"
omegaconf = "*"
hydra-core = "*"
hydra-joblib-launcher = "*"
hydra-optuna-sweeper = "*"
beautifulsoup4 = "^4.12.0"
html5lib = "*"
html-table-parser-python3 = "^0.3.1"
sphinx = "*"
sphinx_rtd_theme = "*"
plotly = "*"
scikit-learn = "*"
numba = "*"
einops = "*"
matplotlib = "*"
sphinx_pdj_theme = "*"
sphinx_mdinclude = "*"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
